--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "spring-petclinic",
+  "name": "-spring-petclinic-",
   "dependencies": {
     "bootstrap": "3.3.6",
     "jquery": "~2.0.3",
